@@ -1,5 +1,5 @@
 AUX sshmenu-3.15-fixmultilib.patch 361 RMD160 7626a37e5dc20d6458bc5047121c5a6ec8af67e9 SHA1 e35de978d2db43c3112f523c1ad3f86ec53fd807 SHA256 b895ccfc387eabbc659bd678f23a35c6358aa94502c1adee93d72a3e95ed567d
 DIST sshmenu-3.15.tar.gz 35399 RMD160 312ab8880a443adac6a628c1219600425bc0d12b SHA1 88383580440ebf626f62ee593709db6d556b8aac SHA256 70d714cdb33e89b8b4dafc830912f08d9d75a5edcbe5c320beab36b0692ae522
-EBUILD sshmenu-3.15.ebuild 1070 RMD160 fb3dca383e6a7959f151dffd533a3d24fd00ddf4 SHA1 ce6ab01aaecb54032dd1b31265cfc74ccb36e172 SHA256 60a7a02a284414d2ee1c1fbffe17adef29627d0d960ab9a70f8556be2f33714a
-MISC ChangeLog 871 RMD160 385a9c38c5e2d949419fb406f651665b1a7f2eac SHA1 034c3a8368224f9cbcce55745f1d2c446e36876c SHA256 b77e89c5e29145c66ae4001e2fbd4c6fa9643fe4037b495e15a9167ccc992492
+EBUILD sshmenu-3.15.ebuild 958 RMD160 4ba579a477a83705c27da9dd51cbbaeeaaced752 SHA1 bb7ad4ca07c9006bd853d12cccf705bf12e0c401 SHA256 36fa8235154421542f297a1371c124c03fda9b2326ce1c6b9d7b9aa4c164ecea
+MISC ChangeLog 1069 RMD160 ad2588844f0462d8c6248d44e33882435e15cd4f SHA1 a077e79319e5831b0476cab930f3070ec8ba93d1 SHA256 5e91ca5fb78904ad1bdfdf9161f552d6ba285e3d274efd07802f0391642d2e58
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
